updated blog tags and made filenames consistent

--- a/content/blog/anime-industry-insight-feb25.mdx
+++ b/content/blog/anime-industry-insight-feb25.mdx
@@ -2,7 +2,7 @@
 title: Predict the release date of your favourite anime!
 description: "Learn about animation producers and production lines in anime studios"
 date: 2025-02-25
-tags: ["anime","anime industry"]
+tags: ["anime industry"]
 published: true
 ---
 
