--- a/content/blog/anime-spotlight-apr25.mdx
+++ b/content/blog/anime-spotlight-apr25.mdx
@@ -2,7 +2,7 @@
 title: Anime Spotlight Apr'25
 description: "×××HOLiC, Pluto"
 date: 2025-04-25
-tags: ["anime", "recommendation"]
+tags: ["anime spotlight"]
 published: true
 ---
 
