--- a/content/blog/anime-spotlight-dec24.mdx
+++ b/content/blog/anime-spotlight-dec24.mdx
@@ -2,7 +2,7 @@
 title: Anime Spotlight Dec'24
 description: 'Given'
 date: 2024-12-02
-tags: ["anime", "recommendation"]
+tags: ["anime spotlight"]
 published: true
 ---
 
