--- a/content/blog/anime-spotlight-feb25.mdx
+++ b/content/blog/anime-spotlight-feb25.mdx
@@ -2,7 +2,7 @@
 title: Anime Spotlight Feb'25
 description: "Michiko & Hatchin"
 date: 2025-02-09
-tags: ["anime", "recommendation"]
+tags: ["anime spotlight"]
 published: true
 ---
 
