--- a/content/blog/anime-spotlight-jan25.mdx
+++ b/content/blog/anime-spotlight-jan25.mdx
@@ -2,7 +2,7 @@
 title: Anime Spotlight Jan'25
 description: "Kino's Journey, Kakushigoto"
 date: 2025-01-28
-tags: ["anime", "recommendation"]
+tags: ["anime spotlight"]
 published: true
 ---
 
