--- a/content/blog/anime-spotlight-may25.mdx
+++ b/content/blog/anime-spotlight-may25.mdx
@@ -2,7 +2,7 @@
 title: Anime Spotlight May'25
 description: "Servant × Service"
 date: 2025-05-01
-tags: ["anime", "recommendation"]
+tags: ["anime spotlight"]
 published: true
 ---
 
