--- a/content/blog/anime-spotlight-nov24.mdx
+++ b/content/blog/anime-spotlight-nov24.mdx
@@ -2,7 +2,7 @@
 title: Anime Spotlight Nov'24
 description: 'Shirobako'
 date: 2024-11-04
-tags: ["anime", "recommendation"]
+tags: ["anime spotlight"]
 published: true
 ---
 
