--- a/content/blog/anime-which-people-dont-talk-about-2.mdx
+++ b/content/blog/anime-which-people-dont-talk-about-2.mdx
@@ -2,7 +2,7 @@
 title: 'Anime Which People Don’t Talk About These Days #2'
 description: "Romeo × Juliet, True Tears, Paranoia Agent, Air, Magic Knight Rayearth"
 date: 2025-05-15
-tags: ["anime", "recommendation"]
+tags: ["older anime"]
 published: true
 ---
 
