--- a/content/blog/anime-which-people-dont-talk-about.mdx
+++ b/content/blog/anime-which-people-dont-talk-about.mdx
@@ -2,7 +2,7 @@
 title: 'Anime Which People Don’t Talk About These Days #1'
 description: "Kyo Kara Maou!, The Story of Saiunkoku, Black Cat, Lovely Complex, Desert Punk"
 date: 2025-04-17
-tags: ["anime", "recommendation"]
+tags: ["older anime"]
 published: true
 ---
 
