--- a/content/blog/bacademy-awards-2025.mdx
+++ b/content/blog/bacademy-awards-2025.mdx
@@ -2,7 +2,7 @@
 title: BACademy Awards 2025
 description: The first BACademy Awards edition for anime and manga
 date: 2025-03-10
-tags: ["anime", "manga", "bacademy awards"]
+tags: ["bacademy awards"]
 published: true
 ---
 
