--- a/content/blog/colors-within.mdx
+++ b/content/blog/colors-within.mdx
@@ -2,7 +2,7 @@
 title: "Kimi no Iro — A journey through Yamada's melodic kaleidoscope"
 description: 'A retrospective of The Colors Within (Kimi no Iro) movie, and artwork by BAC artists'
 date: 2024-12-14
-tags: ["retrospective", "art", "naoko yamada", "anime"]
+tags: ["deep dive", "naoko yamada"]
 published: true
 ---
 
