--- a/content/blog/gimaisei.mdx
+++ b/content/blog/gimaisei.mdx
@@ -2,7 +2,7 @@
 title: Gimai Seikatsu - Complementarity at its finest 
 description: ''
 date: 2025-05-03
-tags: ["anime"]
+tags: ["deep dive"]
 published: true
 ---
 
