--- a/content/blog/k-on.mdx
+++ b/content/blog/k-on.mdx
@@ -2,7 +2,7 @@
 title: 'Naoko Yamada Spotlight: K-On!'
 description: 'Special edition of the Anime Spotlight series in the backdrop of upcoming release of "The Colors Within" movie!'
 date: 2024-11-18
-tags: ["anime", "spotlight", "naoko yamada"]
+tags: ["deep dive", "naoko yamada"]
 published: true
 ---
 
