--- a/content/blog/liz-and-blue-bird.mdx
+++ b/content/blog/liz-and-blue-bird.mdx
@@ -2,7 +2,7 @@
 title: 'Naoko Yamada Spotlight: Liz and the Blue Bird'
 description: 'Special edition of the Anime Spotlight series in the backdrop of upcoming release of "The Colors Within" movie!'
 date: 2024-11-21
-tags: ["anime", "spotlight", "naoko yamada"]
+tags: ["deep dive", "naoko yamada"]
 published: true
 ---
 
