--- a/content/blog/manga-spotlight-apr25.mdx
+++ b/content/blog/manga-spotlight-apr25.mdx
@@ -2,7 +2,7 @@
 title: Manga Spotlight Apr'25
 description: 'The Urban Legend Files, My Dearest Self With Malice Aforethought, Blue Flag'
 date: 2025-04-22
-tags: ["manga", "recommendation"]
+tags: ["manga spotlight"]
 published: true
 ---
 
