--- a/content/blog/manga-spotlight-aug24.mdx
+++ b/content/blog/manga-spotlight-aug24.mdx
@@ -2,7 +2,7 @@
 title: Manga Spotlight Aug'24
 description: 'Blank Canvas: My So-Called Artist’s Journey, Princess Jellyfish, Love at Fourteen'
 date: 2024-08-30
-tags: ["manga", "recommendation"]
+tags: ["manga spotlight"]
 published: true
 ---
 
