--- a/content/blog/manga-spotlight-dec24.mdx
+++ b/content/blog/manga-spotlight-dec24.mdx
@@ -2,7 +2,7 @@
 title: Manga Spotlight Dec'24
 description: 'Message to Adolf, Stargazing Dog, Star Protector Dog'
 date: 2024-12-20
-tags: ["manga", "recommendation"]
+tags: ["manga spotlight"]
 published: true
 ---
 
