--- a/content/blog/manga-spotlight-feb25.mdx
+++ b/content/blog/manga-spotlight-feb25.mdx
@@ -2,7 +2,7 @@
 title: Manga Spotlight Feb'25
 description: 'GTO: The Early Years, Suicide Parabellum'
 date: 2025-02-16
-tags: ["manga", "recommendation"]
+tags: ["manga spotlight"]
 published: true
 ---
 
