--- a/content/blog/manga-spotlight-jan25.mdx
+++ b/content/blog/manga-spotlight-jan25.mdx
@@ -2,7 +2,7 @@
 title: Manga Spotlight Jan'25
 description: 'Toilet-bound Hanako-kun, The Summit of the Gods'
 date: 2025-01-19
-tags: ["manga", "recommendation"]
+tags: ["manga spotlight"]
 published: true
 ---
 
