--- a/content/blog/manga-spotlight-jul24.mdx
+++ b/content/blog/manga-spotlight-jul24.mdx
@@ -2,7 +2,7 @@
 title: Manga Spotlight Jul'24
 description: 'Bless, Mizu wa Umi ni Mukatte Nagareru'
 date: 2024-07-30
-tags: ["manga", "recommendation"]
+tags: ["manga spotlight"]
 published: true
 ---
 
