--- a/content/blog/manga-spotlight-may25.mdx
+++ b/content/blog/manga-spotlight-may25.mdx
@@ -2,7 +2,7 @@
 title: Manga Spotlight May'25
 description: 'Mr. Mallow Blue'
 date: 2025-05-07
-tags: ["manga", "recommendation"]
+tags: ["manga spotlight"]
 published: true
 ---
 
