--- a/content/blog/manga-spotlight-nov24.mdx
+++ b/content/blog/manga-spotlight-nov24.mdx
@@ -2,7 +2,7 @@
 title: Manga Spotlight Nov'24
 description: 'Shiawase Toriming, The Summer Hikaru Died'
 date: 2024-11-27
-tags: ["manga", "recommendation"]
+tags: ["manga spotlight"]
 published: true
 ---
 
