--- a/content/blog/manga-spotlight-oct24.mdx
+++ b/content/blog/manga-spotlight-oct24.mdx
@@ -2,7 +2,7 @@
 title: Manga Spotlight Oct'24
 description: 'The Voynich Hotel, Kanata no Astra, Spirit Circle'
 date: 2024-10-28
-tags: ["manga", "recommendation"]
+tags: ["manga spotlight"]
 published: true
 ---
 
