--- a/content/blog/me1-honobu-yonezawa-gifu-day1.mdx
+++ b/content/blog/me1-honobu-yonezawa-gifu-day1.mdx
@@ -2,7 +2,7 @@
 title: "ME1: Honobu Yonezawa's Gifu Day 1"
 description: "A travelogue/diary entry masquerading as an exploration of Shoushimin and Hyouka, anime adaptations of Honobu Yonezawa’s mystery novels."
 date: 2025-01-24
-tags: ["anime", "honobu yonezawa", "spotlight", "travelogue"]
+tags: ["travelogue"]
 published: true
 ---
 
