--- a/content/blog/secret-santa-2024-part-1.mdx
+++ b/content/blog/secret-santa-2024-part-1.mdx
@@ -2,7 +2,7 @@
 title: "BAC Online Secret Santa: Part-I"
 description: 'Part-I of personalised anime recommendations by and for BAC members, from the Online Secret Santa event!'
 date: 2024-12-21
-tags: ["anime", "recommendation", "secret santa"]
+tags: ["secret santa"]
 published: true
 ---
 
