--- a/content/blog/spring-2025.mdx
+++ b/content/blog/spring-2025.mdx
@@ -1,12 +1,14 @@
 ---
-title: Spring 2025 Season Recommendations
+title: Spring 2025 Season Recommendations
+
 description: 'The most exciting shows of the spring 2025 anime season recommended by BAC members'
 date: 2025-03-27
-tags: ["anime"]
+tags: ["seasonal anime"]
 published: true
 ---
 
-With the Spring 2025 season fast approaching some of you seasonal anime watchers may be confused about what shows to check out since the season seems to lack recognizable big-name IPs. If you're willing to give some new shows a shot we have a variety of interesting anime recommendations from members of the club!
+With the Spring 2025 season fast approaching some of you seasonal anime watchers may be confused about what shows to check out since the season seems to lack recognizable big-name IPs. If you're willing to give some new shows a shot we have a variety of interesting anime recommendations from members of the club!
+
 
 <div align="center" style={{marginBottom: '-10px', marginTop: '0px'}}>
     <h2>**Anne Shirley**</h2>
@@ -53,12 +55,14 @@ Yaiba was *Detective Conan* mangaka Gosho Aoyama’s third manga which he author
 **Recommendation by Ajit**
 
 <div align="center" style={{marginBottom: '-10px', marginTop: '0px'}}>
-    <h2>**Rock is a Lady's Modesty**</h2>
+    <h2>**Rock is a Lady's Modesty**</h2>
+
 </div>
 
 <iframe style={{'width': '100%', 'aspectRatio': '16/9'}} src="https://www.youtube.com/embed/rRwa4N75G4A" frameBorder="0" allow="fullscreen;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"></iframe>
 
-*Rock is a Lady's Modesty* is a coming-of-age anime music drama about a young girl who, after being thrown into a wealthy lifestyle, rediscovers her love of rock music and joins a band with a professional drummer, all while breaking conventional norms.
+*Rock is a Lady's Modesty* is a coming-of-age anime music drama about a young girl who, after being thrown into a wealthy lifestyle, rediscovers her love of rock music and joins a band with a professional drummer, all while breaking conventional norms.
+
 
 Why should you watch it : 
  1) It is set in all girls school with a gripping narrative of rich girl trope blended with rock music genre.
@@ -102,5 +106,6 @@ I could dive deep into the individual staff members, but what truly matters is t
 One key detail worth noting is that the legendary Kenji Kawai will be composing the music for the anime. His compositions possess the power to elevate and transform, capable of moving mountains with their sheer emotional depth. In a series as intense and unfiltered as Cinderella Gray, his score is set to amplify the experience to an entirely new level, turning an already hard boiled, emotionally charged spectacle into a full-blown sensory overload.
 
 **Recommendation by RA**
-
+
+
 <hr className="my-0 mt-2 border-t-2 mb-4" />
