--- a/content/blog/terumin.mdx
+++ b/content/blog/terumin.mdx
@@ -2,7 +2,7 @@
 title: "Terumin「テルミン」"
 description: "Introducing BAC's techie mascot: Terumin!"
 date: 2025-02-01
-tags: ["mascot", "terumin", "bac"]
+tags: []
 published: true
 ---
 
