--- a/content/blog/silent-voice.mdx
+++ b/content/blog/silent-voice.mdx
@@ -2,7 +2,7 @@
 title: 'Naoko Yamada Spotlight: A Silent Voice'
 description: 'Special edition of the Anime Spotlight series in the backdrop of upcoming release of "The Colors Within" movie!'
 date: 2024-11-20
-tags: ["anime", "spotlight", "naoko yamada"]
+tags: ["deep dive", "naoko yamada"]
 published: true
 ---
 
