--- a/content/blog/bac-love-story.mdx
+++ b/content/blog/bac-love-story.mdx
@@ -2,7 +2,7 @@
 title: 'BAC Love Story'
 description: 'Game credits, and the making of BAC Love Story'
 date: 2025-02-14
-tags: []
+tags: ["game", "valentine's day"]
 published: true
 ---
 
