--- a/content/blog/manga-spotlight-may25.mdx
+++ b/content/blog/manga-spotlight-may25.mdx
@@ -1,12 +1,39 @@
 ---
 title: Manga Spotlight May'25
 description: 'Mr. Mallow Blue'
-date: 2025-05-07
+date: 2025-05-19
 tags: ["manga spotlight"]
 published: true
 ---
 
-📅 **Last Updated:** 7th May 2025
+📅 **Last Updated:** 19th May 2025
+
+<div style={{marginBottom: '-15px', marginTop: '0px'}}>
+    # **How to Grill Our Love**
+</div>
+
+_Yaiteru Futari_ or _How to Grill Our Love_ is a very warm gourmet/slice-of-life/romance manga centered around a newly wed couple — Kenta and Chihiro.
+
+Kenta, a very earnest and thoughtful guy, is extremely passionate about grilling. Chihiro on the other hand is more aloof and introverted, but also appears cool and somewhat unapproachable.
+Within a month of meeting each other through a dating app, Kenta and Chihiro decide to get married thanks to a sudden job transfer and not wanting to end their relationship because of that. There on, the story follows the daily lives of the couple slowly getting to know each other, one meal at a time.
+
+<div align="center" style={{marginTop: '-15px', marginBottom: '-15px'}}>
+    <img src="/images/blog/manga-spotlight-may25/grill.webp" style={{width: '100%', maxWidth: '500px'}}/>
+</div>
+
+Thanks to Kenta’s main hobby and passion, most of the meals involve grilling of some sort. There is a lot of attention to detail given to the meals themselves — the way the author introduces different kinds of grilling techniques, recipes, and the cooking tips sprinkled throughout the manga, without making it feel off-topic and blending it with the main story, is quite special. The laid-back setting is accompanied by a very clean art-style, and aesthetic but simple character designs.
+
+If a wholesome, no-fluff romance manga with neat art and delicious grilling recipes sounds fun to you, definitely give this one a try!
+
+**More Info:**
+<a href="https://myanimelist.net/manga/130633/Yaiteru_Futari" target="_blank">MAL</a>,
+<a href="https://anilist.co/manga/124621/Yaiteru-Futari" target="_blank">Anilist</a>,
+<a href="https://en.wikipedia.org/wiki/How_to_Grill_Our_Love" target="_blank">Wikipedia</a> \
+**Credits:** Aravind
+(<a href="https://myanimelist.net/profile/RaphaelSensei" target="_blank">MAL</a>,
+<a href="https://x.com/_aravind_gk" target="_blank">Twitter</a>)
+
+<hr className="mt-8 border-t-2 mb-8" />
 
 <div style={{marginBottom: '-15px', marginTop: '0px'}}>
     # **Mr. Mallow Blue**
