--- a/content/blog/manga-spotlight-may25.mdx
+++ b/content/blog/manga-spotlight-may25.mdx
@@ -1,6 +1,6 @@
 ---
 title: Manga Spotlight May'25
-description: 'Mr. Mallow Blue'
+description: 'Mr. Mallow Blue, How to Grill Our Love'
 date: 2025-05-19
 tags: ["manga spotlight"]
 published: true
