--- a/content/blog/manga-spotlight-may25.mdx
+++ b/content/blog/manga-spotlight-may25.mdx
@@ -4,6 +4,7 @@ description: 'Mr. Mallow Blue, How to Grill Our Love'
 date: 2025-05-19
 tags: ["manga spotlight"]
 published: true
+image: /images/blog/manga-spotlight-may25/grill.webp
 ---
 
 📅 **Last Updated:** 19th May 2025
